Fix overlapping dates by transitioning from absolute positioning to CSS floats with flow-root wrappers

--- a/media/abletterer-print.css
+++ b/media/abletterer-print.css
@@ -175,11 +175,7 @@ p, ul, table, div, blockquote {
 
 p {
 	margin-bottom: 0.4em;
-	padding-right: 140px; /* Prevents text overlap with dates */
-}
-
-.citations p, .citations li, p.intro, blockquote p, #webaddress p {
-	padding-right: 0;
+	overflow: flow-root; /* Contains floated elements */
 }
 
 code {
@@ -188,11 +184,12 @@ code {
 }
 
 p code {
-	position: absolute;
-	right: 0;
-	top: 0;
+	float: right;
+	margin-left: 2em;
+	margin-bottom: 0.2em;
 	text-align: right;
 	font-weight: 600;
+	position: static !important;
 }
 
 ul {
@@ -200,10 +197,10 @@ ul {
 }
 
 li {
+	overflow: flow-root; /* Contains floated elements */
 	position: relative;
 	padding-left: 1.25em;
 	text-indent: -1.25em;
-	padding-right: 140px; /* Prevents text overlap with dates */
 	margin-bottom: 0.3em;
 }
 
@@ -218,16 +215,13 @@ li ul {
 	margin-bottom: 0;
 }
 
-li ul li {
-	padding-right: 0;
-}
-
 li code {
-	position: absolute;
-	right: 0;
-	top: 0;
+	float: right;
+	margin-left: 2em;
+	margin-bottom: 0.2em;
 	text-align: right;
 	font-weight: 600;
+	position: static !important;
 }
 
 a {
